app/assets/sass/application.scss
// Import GOV.UK elements from /govuk-modules/, this will import the frontend toolkit and some base styles.
// Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
@import 'govuk-elements';

// Take a look at in app/assets/sass/patterns/ to see which files are imported.
@import 'patterns/check-your-answers';
@import 'patterns/unbranded';

// Related items
// (These styles will be moved to GOV.UK elements, duplicating here for now.)
.govuk-related-items {
  margin-top: $gutter;
  border-top: 10px solid $govuk-blue;
  padding-top: 5px;

  .heading-medium {
    margin-top: 0.3em;
    margin-bottom: 0.5em
  }

  li {
    margin-bottom: 10px;
    list-style-type: none;
  }
}

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

.related li a.inline {
  display: inline;
}

.grid-row main#content {
  margin: 0;
}

.related.related li a[href*="#"] {
  color: #005ea5;
  text-decoration: underline;
}

a:visited {
  color: #005ea5;
}

.header-proposition {
  display: none;
}

